2012-04-02  vs. 1.0-3 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers

2010-06-10  vs. 1.0-2 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers

2010-06-10  vs. 1.0-1 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers

2010-05-27  vs. 1.0-0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers
