@@ -1,15 +1,0 @@
-Functions:
-=========
-fdt.data.frame            S3 method for `data.frames'
-fdt.default               S3 method for `vectors'
-fdt.matrix                S3 method for `matrices'
-fdt                       Main function S3 based
-make.fdt.format.classes   To format interval classes description according to a pattern wich is a regular expression
-make.fdt.multiple         To make tables from a `data.frames' or `matrices' containing at least one numeric column
-make.fdt.simple           To make a table from a numeric vector
-plot.fdt.default          S3 method for `fdt.default' objects
-plot.fdt.multiple         S3 method for `fdt.multiple' objects
-print.fdt.default         S3 method for `fdt.default' objects
-print.fdt.multiple        S3 method for `fdt.multiple' objects
-summary.fdt.default       S3 method for `fdt.default' objects
-summary.fdt.multiple      S3 method for `fdt.multiple' fdt objects
